@@ -1,11 +1,15 @@
 /*
- * $Id: ChangeLog,v 1.40 2005-11-10 04:36:16 guerra000 Exp $
+ * $Id: ChangeLog,v 1.41 2005-11-12 05:21:51 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-11-11 23:09 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_windows.c
+    ! PRG-level result is now saved after calling ::Events() method.
 
 2005-11-09 22:28 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * include/i_window.ch
